[package]
name = "footage"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Henrique <hello@exst.fun>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
viuer = "^0.6"
crossterm = "^0.23"
tui = "^0.17"
serde = {version = "^1", features = ["derive"] }
serde_json = "^1"
chrono = { version = "^0.4", features = ["serde"] }
thiserror = "^1"